--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,12 +2,12 @@
 
 Name Name:
   name        : "Name Name"
-  uri         : "http://name.com"
+  uri         : "http://liangdaojun.github.io"
   email       : "name@name.com"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  avatar      : "myphoto.jpg"
+  twitter     : "liangdaojun"
+  google_plus : "liangdaojun"
 
 Name2 Name2:
   name        : "Name2 Name2"
