--- a/_config.yml
+++ b/_config.yml
@@ -83,10 +83,10 @@ author:
   name             : "Daojun Liang"
   avatar           : "myphoto.jpg"
   bio              : "I'm a PHD student in Shandong University."
-  location         : "JiNan Shandong"
+  location         : "Shandong University"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=6bSRcfEAAAAJ"
   email            : "liangdaojun@mail.sdu.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/liangdaojun"
+  github           : "liangdaojun"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : ""
   vine             :
   weibo            :
   xing             :
